@@ -1,4 +1,4 @@
-package Security;
+package com.DiagramParcialBackend.Security;
 
 
 import com.DiagramParcialBackend.Entity.Users;
@@ -8,6 +8,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @AllArgsConstructor
@@ -27,9 +28,9 @@ public class SecurityUser implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(user.getRole().name()));
+        // Ya no necesitas manejar los roles aquí, por lo que puedes retornar una lista vacía o simplemente no usar authorities
+        return Collections.emptyList();
     }
-
     @Override
     public boolean isAccountNonExpired() {
         return true;
